# tf_wrapper_embedding

./: .gitignore  CMakeLists.txt  README.md  config.json  main.cpp  process.sh
application/: CMakeLists.txt  main.cpp
application/example/: CMakeLists.txt  main.cpp
application/metrics/: CMakeLists.txt  config.json  main.cpp  metrics_base.cpp  metrics_base.h
cmake/: FindTensorFlow.cmake_old  FindTensorFlow.cmake_old_2
src/: CMakeLists.txt  interfaces.h  main.cpp  tensorflow_auxiliary.cpp  tensorflow_auxiliary.h  tensorflow_base.h  tensorflow_embeddings.cpp  tensorflow_embeddings.h  tensorflow_wrapper_core.cpp  tensorflow_wrapper_core.h  tflow_wrapper_core.cpp  tflow_wrapper_core.h  wrapper_base.cpp  wrapper_base.h  wrapper_interfaces.h  wrapper_legacy.h
src/common/: common_ops.cpp  common_ops.h  fs_handling.cpp  fs_handling.h  image_handling.cpp  image_handling.h
tests/: CMakeLists.txt  tf_test.cpp  wrapper_base_tests.cpp  wrapper_base_tests.h
tests/TF_tests/: testExecutionAcceptance.cpp
tests/commonTests/: CMakeLists.txt  testClassExtraction.cpp  testDataHandling.cpp
tests/common_tests/: CMakeLists.txt  testClassExtraction.cpp
tests/metricsTests/: CMakeLists.txt  testMetricsBase.cpp
tests/tensorflowTests/: CMakeLists.txt  testExecutionAcceptance.cpp
tests/test_data/: config.json  sample_config.json
tests/tf_test/: CMakeLists.txt  tf_test.h
tests/wrapperTests/: CMakeLists.txt  testWrapperBase.cpp
tests/wrapper_base/: CMakeLists.txt  wrapper_base_tests.h
tf_wrapper/: CMakeLists.txt
tf_wrapper/include/tf_wrapper/: interfaces.h  tensorflow_auxiliary.h  tensorflow_base.h  tensorflow_embeddings.h  tensorflow_wrapper_core.h  wrapper_base.h  wrapper_interfaces.h  wrapper_legacy.h
tf_wrapper/include/tf_wrapper/common/: common_ops.h  fs_handling.h
tf_wrapper/src/: tensorflow_auxiliary.cpp  tensorflow_embeddings.cpp  tensorflow_wrapper_core.cpp  wrapper_base.cpp  wrapper_legacy.cpp
tf_wrapper/src/common/: common_ops.cpp  fs_handling.cpp
